# njd-siren-dpf

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
docs/: 2026-06-17-collector-waveform-model-design.md  2026-06-17-collector-waveform-model-plan.md  njd-siren-trim-pots.md
dsp/: DenormalGuard.hpp  SirenEngine.hpp
plugin/: DistrhoPluginInfo.h  ParameterMetadata.hpp  SirenPlugin.cpp  SirenPlugin.hpp  SirenUI.cpp  SirenUI.hpp
test/: CMakeLists.txt  render_proto.cpp  test_siren_engine.cpp
